# voice-forge

./: .gitignore  CHANGELOG.md  README.md  devenv.nix  example.py  pyproject.toml
.github/workflows/: main.yml  pr.yml
voice_forge/: __init__.py  config.py  piper_tts.py  types.py
