[tool.poetry]
name = "voice-forge"
version = "0.1.1"
description = ""
authors = ["Ivan Zatevakhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
piper-tts = { version="^1.2.0" }
huggingface-hub = { version="^0.23.0" }
httpx = { version="^0.27.0" }
numpy = { version="^1.26.4" }

[tool.poetry.extras]
piper = ["piper-tts"]


[tool.poetry.dev-dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

