[tool.poetry]
name = "voice-forge"
version = "0.1.3"
description = ""
authors = ["Ivan Zatevakhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
piper-tts = { version="^1.2.0", optional=true }
huggingface-hub = { version="^0.23.0" }
httpx = { version="^0.27.0" }
numpy = { version="^1.26.4" }
sounddevice = { version="^0.4.7", optional=true }
# Pinnded due to issues with piper models.
# - https://github.com/rhasspy/piper/issues/520
# - https://github.com/microsoft/onnxruntime/issues/20877
onnxruntime = {version = ">=1.16.3,<1.18.0"}

[tool.poetry.extras]
piper = ["piper-tts"]
examples = ["sounddevice"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
python-semantic-release = "^9.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    # "SIM", # nope
    # isort
    "I",
]

[tool.semantic_release]
version_variables = [
    "pyproject.toml:version"
]
branch = "main"
commit_parser = "angular"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true

